{
    "name": "CraneInputActions",
    "maps": [
        {
            "name": "Crane",
            "id": "6e58ca60-18cd-4cfb-8bed-a62f146767a0",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "1485e50b-1ee4-4a46-b07d-70421a4515cc",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PickupAndDrop",
                    "type": "Button",
                    "id": "be97a59a-17b2-4905-bee2-178df83356b0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShrinkRope",
                    "type": "Button",
                    "id": "fc1b1fc1-e670-46c1-94b5-f8d02d62a847",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LooseRope",
                    "type": "Button",
                    "id": "308d90be-4691-42f8-97f4-66830dd73990",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "3D Vector",
                    "id": "27dcfcfc-d4b6-47e2-a1e0-aabc71e8ac5d",
                    "path": "3DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d885558a-7ac7-46c5-a5f6-4fc644824f87",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "a17e9f51-5479-415f-bb3f-7824953e5e06",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "41baaaab-a2bd-4630-a7b1-39424baa0608",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "6d61bd62-8f07-4493-ba90-ec43490edebe",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "a38a0ca2-8de7-45ac-adb1-30179b89b663",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickupAndDrop",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4b6a614-3946-4293-b664-25eee58b3f28",
                    "path": "<Keyboard>/shift",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "ShrinkRope",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "838108fd-6964-494e-8477-52b6a0335d3e",
                    "path": "<Keyboard>/alt",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "LooseRope",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}